Lab11 16/App6/app6-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app6-deploy
spec:
  selector:
    matchLabels:
      app: app6
      version: v1
  template:
    metadata:
      labels:
        app: app6
        version: v1
    spec:
      containers:
      - name: app6
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name:  app6-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name:  app6-volume
        configMap:
          name: app6-configmap
