Lab11 16/App6/app6-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app6-svc
spec:
  selector:
    app: app6
  ports:
  - name: http-default
    port: 80
