Lab11 16/App6/app6-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app6-destinationrules
spec:
  host: app6-svc.default.svc.cluster.local
  subsets:
  - name: app6-v1-subset
    labels:
      app: app6
      version: v1
